Cambios pendientes en directorios restantes

--- a/c-api/exceptions.po
+++ b/c-api/exceptions.po
@@ -963,7 +963,7 @@ msgstr "En Windows, la función ahora también admite controladores de socket."
 
 #: ../Doc/c-api/exceptions.rst:634
 msgid "Exception Classes"
-msgstr "Clases de Excepción"
+msgstr "Clases de excepción"
 
 #: ../Doc/c-api/exceptions.rst:638
 msgid ""
@@ -1008,7 +1008,7 @@ msgstr ""
 
 #: ../Doc/c-api/exceptions.rst:661
 msgid "Exception Objects"
-msgstr "Objetos Excepción"
+msgstr "Objetos excepción"
 
 #: ../Doc/c-api/exceptions.rst:665
 msgid ""
@@ -1079,7 +1079,7 @@ msgstr ""
 
 #: ../Doc/c-api/exceptions.rst:710
 msgid "Unicode Exception Objects"
-msgstr "Objetos Unicode de Excepción"
+msgstr "Objetos unicode de excepción"
 
 #: ../Doc/c-api/exceptions.rst:712
 msgid ""
@@ -1157,7 +1157,7 @@ msgstr ""
 
 #: ../Doc/c-api/exceptions.rst:778
 msgid "Recursion Control"
-msgstr "Control de Recursión"
+msgstr "Control de recursión"
 
 #: ../Doc/c-api/exceptions.rst:780
 msgid ""
@@ -1287,7 +1287,7 @@ msgstr ""
 
 #: ../Doc/c-api/exceptions.rst:847
 msgid "Standard Exceptions"
-msgstr "Excepciones Estándar"
+msgstr "Excepciones estándar"
 
 #: ../Doc/c-api/exceptions.rst:849
 msgid ""
