--- a/c-api/typeobj.po
+++ b/c-api/typeobj.po
@@ -1113,11 +1113,11 @@ msgstr "typedef"
 
 #: ../Doc/c-api/typeobj.rst:331
 msgid "Parameter Types"
-msgstr "Tipos Parámetros"
+msgstr "Tipos parámetros"
 
 #: ../Doc/c-api/typeobj.rst:331
 msgid "Return Type"
-msgstr "Tipo de Retorno"
+msgstr "Tipo de retorno"
 
 #: ../Doc/c-api/typeobj.rst:338 ../Doc/c-api/typeobj.rst:340
 #: ../Doc/c-api/typeobj.rst:416
@@ -3794,7 +3794,7 @@ msgstr ""
 
 #: ../Doc/c-api/typeobj.rst:2070
 msgid "Number Object Structures"
-msgstr "Estructuras de Objetos de Números"
+msgstr "Estructuras de objetos de números"
 
 #: ../Doc/c-api/typeobj.rst:2077
 msgid ""
@@ -3836,7 +3836,7 @@ msgstr ""
 
 #: ../Doc/c-api/typeobj.rst:2184
 msgid "Mapping Object Structures"
-msgstr "Estructuras de Objetos Mapeo"
+msgstr "Estructuras de objetos mapeo"
 
 #: ../Doc/c-api/typeobj.rst:2191
 msgid ""
@@ -4016,7 +4016,7 @@ msgstr ""
 
 #: ../Doc/c-api/typeobj.rst:2301
 msgid "Buffer Object Structures"
-msgstr "Estructuras de Objetos Búfer"
+msgstr "Estructuras de objetos búfer"
 
 #: ../Doc/c-api/typeobj.rst:2309
 msgid ""
