--- a/c-api/unicode.po
+++ b/c-api/unicode.po
@@ -25,11 +25,11 @@ msgstr ""
 
 #: ../Doc/c-api/unicode.rst:6
 msgid "Unicode Objects and Codecs"
-msgstr "Objetos y códecs Unicode"
+msgstr "Objetos y códecs unicode"
 
 #: ../Doc/c-api/unicode.rst:12
 msgid "Unicode Objects"
-msgstr "Objetos Unicode"
+msgstr "Objetos unicode"
 
 #: ../Doc/c-api/unicode.rst:14
 msgid ""
@@ -104,7 +104,7 @@ msgstr ""
 
 #: ../Doc/c-api/unicode.rst:43
 msgid "Unicode Type"
-msgstr "Tipo Unicode"
+msgstr "Tipo unicode"
 
 #: ../Doc/c-api/unicode.rst:45
 msgid ""
@@ -894,7 +894,7 @@ msgstr ":attr:`%U`"
 
 #: ../Doc/c-api/unicode.rst:529
 msgid "A Unicode object."
-msgstr "Un objeto Unicode."
+msgstr "Un objeto unicode."
 
 #: ../Doc/c-api/unicode.rst:531
 msgid ":attr:`%V`"
