--- a/distutils/introduction.po
+++ b/distutils/introduction.po
@@ -51,7 +51,7 @@ msgstr ""
 
 #: ../Doc/distutils/introduction.rst:18
 msgid "Concepts & Terminology"
-msgstr "Conceptos y Terminología"
+msgstr "Conceptos y terminología"
 
 #: ../Doc/distutils/introduction.rst:20
 msgid ""
