--- a/distutils/packageindex.po
+++ b/distutils/packageindex.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/distutils/packageindex.rst:7
 msgid "The Python Package Index (PyPI)"
-msgstr "El Indice de Paquetes de Python (PyPI)"
+msgstr "El índice de paquetes de Python (PyPI)"
 
 #: ../Doc/distutils/packageindex.rst:9
 msgid ""
