--- a/extending/extending.po
+++ b/extending/extending.po
@@ -714,7 +714,7 @@ msgstr ""
 
 #: ../Doc/extending/extending.rst:446
 msgid "Compilation and Linkage"
-msgstr "Compilación y Enlazamiento"
+msgstr "Compilación y enlazamiento"
 
 #: ../Doc/extending/extending.rst:448
 msgid ""
@@ -1067,7 +1067,7 @@ msgstr ""
 
 #: ../Doc/extending/extending.rst:800
 msgid "Building Arbitrary Values"
-msgstr "Construyendo Valores Arbitrarios"
+msgstr "Construyendo valores arbitrarios"
 
 #: ../Doc/extending/extending.rst:802
 msgid ""
@@ -1119,7 +1119,7 @@ msgstr ""
 
 #: ../Doc/extending/extending.rst:846
 msgid "Reference Counts"
-msgstr "Conteo de Referencias"
+msgstr "Conteo de referencias"
 
 #: ../Doc/extending/extending.rst:848
 msgid ""
@@ -1279,7 +1279,7 @@ msgstr ""
 
 #: ../Doc/extending/extending.rst:918
 msgid "Reference Counting in Python"
-msgstr "Conteo de Referencias en Python"
+msgstr "Conteo de referencias en Python"
 
 #: ../Doc/extending/extending.rst:920
 msgid ""
@@ -1373,7 +1373,7 @@ msgstr ""
 
 #: ../Doc/extending/extending.rst:960
 msgid "Ownership Rules"
-msgstr "Reglas de Propiedad"
+msgstr "Reglas de propiedad"
 
 #: ../Doc/extending/extending.rst:962
 msgid ""
@@ -1667,7 +1667,7 @@ msgstr ""
 
 #: ../Doc/extending/extending.rst:1124
 msgid "Writing Extensions in C++"
-msgstr "Escribiendo Extensiones en C++"
+msgstr "Escribiendo extensiones en C++"
 
 #: ../Doc/extending/extending.rst:1126
 msgid ""
