--- a/faq/library.po
+++ b/faq/library.po
@@ -650,7 +650,7 @@ msgstr ""
 
 #: ../Doc/faq/library.rst:456
 msgid "Input and Output"
-msgstr "Entrada y Salida"
+msgstr "Entrada y salida"
 
 #: ../Doc/faq/library.rst:459
 msgid "How do I delete a file? (And other file questions...)"
@@ -1093,7 +1093,7 @@ msgstr ""
 
 #: ../Doc/faq/library.rst:815
 msgid "Mathematics and Numerics"
-msgstr "Matemáticas y Numérica"
+msgstr "Matemáticas y numérica"
 
 #: ../Doc/faq/library.rst:818
 msgid "How do I generate random numbers in Python?"
