--- a/howto/ipaddress.po
+++ b/howto/ipaddress.po
@@ -141,7 +141,7 @@ msgstr ""
 
 #: ../Doc/howto/ipaddress.rst:82
 msgid "Defining Networks"
-msgstr "Definiendo Redes"
+msgstr "Definiendo redes"
 
 #: ../Doc/howto/ipaddress.rst:84
 msgid ""
@@ -221,7 +221,7 @@ msgstr ""
 
 #: ../Doc/howto/ipaddress.rst:135
 msgid "Host Interfaces"
-msgstr "Interfaces de Host"
+msgstr "Interfaces de host"
 
 #: ../Doc/howto/ipaddress.rst:137
 msgid ""
