--- a/howto/regex.po
+++ b/howto/regex.po
@@ -635,7 +635,7 @@ msgstr ""
 
 #: ../Doc/howto/regex.rst:256
 msgid "Using Regular Expressions"
-msgstr "Usando Expresiones Regulares"
+msgstr "Usando expresiones regulares"
 
 #: ../Doc/howto/regex.rst:258
 msgid ""
@@ -651,7 +651,7 @@ msgstr ""
 
 #: ../Doc/howto/regex.rst:265
 msgid "Compiling Regular Expressions"
-msgstr "Compilando Expresiones regulares"
+msgstr "Compilando expresiones regulares"
 
 #: ../Doc/howto/regex.rst:267
 msgid ""
