--- a/install/index.po
+++ b/install/index.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/install/index.rst:7
 msgid "Installing Python Modules (Legacy version)"
-msgstr "Instalación de Módulos de Python (versión antigua)"
+msgstr "Instalación de módulos de Python (versión antigua)"
 
 #: ../Doc/install/index.rst
 msgid "Author"
