--- a/reference/compound_stmts.po
+++ b/reference/compound_stmts.po
@@ -1115,7 +1115,7 @@ msgstr ""
 
 #: ../Doc/reference/compound_stmts.rst:861
 msgid "Capture Patterns"
-msgstr "Capturar patrones"
+msgstr "Patrones de captura"
 
 #: ../Doc/reference/compound_stmts.rst:863
 msgid "A capture pattern binds the subject value to a name. Syntax:"
