--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -3000,7 +3000,7 @@ msgstr "Describe las funciones ``__getattr__`` y ``__dir__`` en módulos."
 
 #: ../Doc/reference/datamodel.rst:1738
 msgid "Implementing Descriptors"
-msgstr "Implementando Descriptores"
+msgstr "Implementando descriptores"
 
 #: ../Doc/reference/datamodel.rst:1740
 msgid ""
@@ -3101,7 +3101,7 @@ msgstr ""
 
 #: ../Doc/reference/datamodel.rst:1791
 msgid "Invoking Descriptors"
-msgstr "Invocando Descriptores"
+msgstr "Invocando descriptores"
 
 #: ../Doc/reference/datamodel.rst:1793
 #, fuzzy
@@ -3154,7 +3154,7 @@ msgstr ""
 
 #: ../Doc/reference/datamodel.rst:1814
 msgid "Direct Call"
-msgstr "Llamado Directo"
+msgstr "Llamado directo"
 
 #: ../Doc/reference/datamodel.rst:1813
 msgid ""
@@ -3166,7 +3166,7 @@ msgstr ""
 
 #: ../Doc/reference/datamodel.rst:1818
 msgid "Instance Binding"
-msgstr "Enlace de Instancia"
+msgstr "Enlace de instancia"
 
 #: ../Doc/reference/datamodel.rst:1817
 msgid ""
@@ -3178,7 +3178,7 @@ msgstr ""
 
 #: ../Doc/reference/datamodel.rst:1822
 msgid "Class Binding"
-msgstr "Enlace de Clase"
+msgstr "Enlace de clase"
 
 #: ../Doc/reference/datamodel.rst:1821
 msgid ""
@@ -3190,7 +3190,7 @@ msgstr ""
 
 #: ../Doc/reference/datamodel.rst:1828
 msgid "Super Binding"
-msgstr "Súper Enlace"
+msgstr "Súper enlace"
 
 #: ../Doc/reference/datamodel.rst:1825
 msgid ""
@@ -3574,7 +3574,7 @@ msgstr ""
 
 #: ../Doc/reference/datamodel.rst:2073
 msgid "MRO entries are resolved;"
-msgstr "Entradas de la Orden de Resolución de Método (MRU) son resueltas;"
+msgstr "Entradas de la orden de resolución de método (MRU) son resueltas;"
 
 #: ../Doc/reference/datamodel.rst:2074
 msgid "the appropriate metaclass is determined;"
@@ -4790,7 +4790,7 @@ msgstr "Corrutinas"
 
 #: ../Doc/reference/datamodel.rst:2933
 msgid "Awaitable Objects"
-msgstr "Objetos Esperables"
+msgstr "Objetos esperables"
 
 #: ../Doc/reference/datamodel.rst:2935
 #, fuzzy
@@ -4830,7 +4830,7 @@ msgstr ":pep:`492` para información adicional sobre objetos esperables."
 
 #: ../Doc/reference/datamodel.rst:2959
 msgid "Coroutine Objects"
-msgstr "Objetos de Corrutina"
+msgstr "Objetos de corrutina"
 
 #: ../Doc/reference/datamodel.rst:2961
 #, fuzzy
@@ -4989,7 +4989,7 @@ msgstr ""
 
 #: ../Doc/reference/datamodel.rst:3061
 msgid "Asynchronous Context Managers"
-msgstr "Gestores de Contexto Asíncronos"
+msgstr "Gestores de contexto asíncronos"
 
 #: ../Doc/reference/datamodel.rst:3063
 msgid ""
