--- a/sphinx.po
+++ b/sphinx.po
@@ -25,11 +25,11 @@ msgstr "Esta página"
 
 #: ../Doc/tools/templates/customsourcelink.html:5
 msgid "Report a Bug"
-msgstr "Reporta un Bug"
+msgstr "Reporta un bug"
 
 #: ../Doc/tools/templates/customsourcelink.html:8
 msgid "Show Source"
-msgstr "Ver Fuente"
+msgstr "Ver fuente"
 
 #: ../Doc/tools/templates/dummy.html:6
 msgid "CPython implementation detail:"
@@ -70,7 +70,7 @@ msgstr "empieza aquí"
 
 #: ../Doc/tools/templates/indexcontent.html:17
 msgid "Library Reference"
-msgstr "Referencia de la Biblioteca"
+msgstr "Referencia de la biblioteca"
 
 #: ../Doc/tools/templates/indexcontent.html:18
 msgid "keep this under your pillow"
@@ -148,7 +148,7 @@ msgstr "Índices y tablas:"
 
 #: ../Doc/tools/templates/indexcontent.html:42
 msgid "Global Module Index"
-msgstr "Índice de Módulos Global"
+msgstr "Índice de módulos global"
 
 #: ../Doc/tools/templates/indexcontent.html:43
 msgid "quick access to all modules"
@@ -200,7 +200,7 @@ msgstr "Acerca de la documentación"
 
 #: ../Doc/tools/templates/indexcontent.html:61
 msgid "Contributing to Docs"
-msgstr "Contribuyendo con la Documentación"
+msgstr "Contribuyendo con la documentación"
 
 #: ../Doc/tools/templates/indexcontent.html:62
 msgid "History and License of Python"
@@ -265,7 +265,7 @@ msgstr "Listado de libros"
 
 #: ../Doc/tools/templates/indexsidebar.html:19
 msgid "Audio/Visual Talks"
-msgstr "Charlas Audios/Videos"
+msgstr "Charlas audios/videos"
 
 #: ../Doc/tools/templates/layout.html:10
 msgid "Documentation "
