--- a/tutorial/venv.po
+++ b/tutorial/venv.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/tutorial/venv.rst:6
 msgid "Virtual Environments and Packages"
-msgstr "Entornos Virtuales y Paquetes"
+msgstr "Entornos virtuales y paquetes"
 
 #: ../Doc/tutorial/venv.rst:9
 msgid "Introduction"
@@ -87,7 +87,7 @@ msgstr ""
 
 #: ../Doc/tutorial/venv.rst:36
 msgid "Creating Virtual Environments"
-msgstr "Creando Entornos Virtuales"
+msgstr "Creando entornos virtuales"
 
 #: ../Doc/tutorial/venv.rst:38
 msgid ""
