--- a/using/index.po
+++ b/using/index.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: ../Doc/using/index.rst:5
 msgid "Python Setup and Usage"
-msgstr "Configuración y Uso de Python"
+msgstr "Configuración y uso de Python"
 
 #: ../Doc/using/index.rst:8
 msgid ""
