--- a/c-api/float.po
+++ b/c-api/float.po
@@ -132,7 +132,7 @@ msgstr ""
 
 #: ../Doc/c-api/float.rst:82
 msgid "Pack and Unpack functions"
-msgstr "Empaquetar y desempaquetar funciones"
+msgstr "Funciones de empaquetado y desempaquetado"
 
 #: ../Doc/c-api/float.rst:84
 msgid ""
