--- a/using/configure.po
+++ b/using/configure.po
@@ -1153,7 +1153,7 @@ msgid ""
 "Example on Linux x86-64::"
 msgstr ""
 "Otras extensiones de C se crean como bibliotecas dinámicas, como el módulo "
-"``_asyncio``. Están construidos con la macro ``Py_BUILD_CORE_MODULE`` "
+"``_asyncio``. Están construidas con la macro ``Py_BUILD_CORE_MODULE`` "
 "definida. Ejemplo en Linux x86-64::"
 
 #: ../Doc/using/configure.rst:659
