Corrección de titlecase (#2249)
En el issue #2173 se hablaba sobre normalizar el estilo que utilizamos
en los títulos, por una cuestión de uniformidad y acorde a lo propio en
español, se propuso modificar aquellos que estuvieran acoplados al
Titlecase del inglés, este PR incluye las modificaciones que consideré
pertinentes para lograr ese objetivo, pero dependemos fuertemente de que
se mantenga esto como regla de estilo al traducir los archivos.

- [x] Correcciones en `c-api`
- [x] Correcciones en `distributing`
- [x] Correcciones en `distutils`
- [x] Correcciones en `extending`
- [x] Correcciones en `faq`
- [x] Correcciones en `howto`
- [x] Correcciones en `includes`
- [x] Correcciones en `install`
- [x] Correcciones en `installing`
- [x] Correcciones en `library`
- [x] Correcciones en `reference`
- [x] Correcciones en `tutorial`
- [x] Correcciones en `using`
- [x] Correcciones en `whatsnew`

## Referencias
- [Uso de mayúsculas (RAE)](https://www.rae.es/dpd/mayúsculas)

Closes #2173

--- a/distutils/introduction.po
+++ b/distutils/introduction.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/distutils/introduction.rst:5
 msgid "An Introduction to Distutils"
-msgstr "Una introducción a Distutils"
+msgstr "Una introducción a distutils"
 
 #: ../Doc/distutils/_setuptools_disclaimer.rst:3
 msgid ""
@@ -51,7 +51,7 @@ msgstr ""
 
 #: ../Doc/distutils/introduction.rst:18
 msgid "Concepts & Terminology"
-msgstr "Conceptos y Terminología"
+msgstr "Conceptos y terminología"
 
 #: ../Doc/distutils/introduction.rst:20
 msgid ""
