Apply suggestions from code review
Co-authored-by: rtobar <rtobarc@gmail.com>

--- a/c-api/float.po
+++ b/c-api/float.po
@@ -82,7 +82,7 @@ msgid ""
 "This method returns ``-1.0`` upon failure, so one should call :c:func:"
 "`PyErr_Occurred` to check for errors."
 msgstr ""
-"Retorna una representación de una estructura C :c:expr:`double` de los "
+"Retorna una representación C :c:expr:`double` de los "
 "contenidos de *pyfloat*. Si *pyfloat* no es un objeto de punto flotante de "
 "Python pero tiene un método :meth:`__float__`, primero se llamará a este "
 "método para convertir *pyfloat* en un flotante. Si ``__float __()`` no está "
@@ -195,7 +195,7 @@ msgid ""
 msgstr ""
 "Las rutinas de empaquetado escriben 2, 4 o 8 bytes, comenzando en *p*. *le* "
 "es un argumento :c:expr:`int`, distinto de cero si desea la cadena bytes con "
-"criterio little-endian (exponente al final, en ``p+1``, ``p+3``, or ``p+6`` "
+"criterio little-endian (exponente al final, en ``p+1``, ``p+3``, o ``p+6`` "
 "``p+7``), cero si se necesita el criterio big-endian (exponente primero, en "
 "*p*). La constante :c:data:`PY_BIG_ENDIAN` se puede usar para usar el endian "
 "nativo: es igual a ``1`` en el procesador big endian, o ``0`` en el "
@@ -254,10 +254,10 @@ msgid ""
 msgstr ""
 "Las rutinas de desempaquetado leen 2, 4 o 8 bytes, comenzando en *p*. *le* "
 "es un argumento :c:expr:`int` , distinto de cero si la cadena bytes usa el "
-"criterio little-endian (exponente al final, en ``p+1``, ``p+3`` or ``p+6`` "
-"and ``p+7``), cero si usa el criterio big-endian (exponente primero, en "
+"criterio little-endian (exponente al final, en ``p+1``, ``p+3`` o ``p+6`` "
+"y ``p+7``), cero si usa el criterio big-endian (exponente primero, en "
 "*p*). La constante :c:data:`PY_BIG_ENDIAN` se puede usar para usar el "
-"endian: es igual a `1`` en el procesador big endian, o ``0`` en el "
+"endian: es igual a ``1`` en el procesador big endian, o ``0`` en el "
 "procesador little endian."
 
 #: ../Doc/c-api/float.rst:147
@@ -276,7 +276,7 @@ msgid ""
 "that represents a NaN or infinity."
 msgstr ""
 "Hay que tener en cuenta que en una plataforma que no sea IEEE, esto se "
-"negará el desempaquetado de una cadena de bytes que representa un NaN o "
+"negará a desempaquetar una cadena de bytes que representa un NaN o "
 "infinito."
 
 #: ../Doc/c-api/float.rst:156
