Agregando comentario de revision
quitando expr que ya no están, traduciendo
frases, powrap, y pospell

--- a/c-api/float.po
+++ b/c-api/float.po
@@ -82,12 +82,12 @@ msgid ""
 "This method returns ``-1.0`` upon failure, so one should call :c:func:"
 "`PyErr_Occurred` to check for errors."
 msgstr ""
-"Retorna una representación C :c:expr:`double` de los "
-"contenidos de *pyfloat*. Si *pyfloat* no es un objeto de punto flotante de "
-"Python pero tiene un método :meth:`__float__`, primero se llamará a este "
-"método para convertir *pyfloat* en un flotante. Si ``__float __()`` no está "
-"definido, entonces recurre a :meth:`__index__`. Este método retorna ``-1.0`` "
-"en caso de falla, por lo que se debe llamar a :c:func:`PyErr_Occurred` para "
+"Retorna una representación C :c:expr:`double` de los contenidos de "
+"*pyfloat*. Si *pyfloat* no es un objeto de punto flotante de Python pero "
+"tiene un método :meth:`__float__`, primero se llamará a este método para "
+"convertir *pyfloat* en un flotante. Si ``__float __()`` no está definido, "
+"entonces recurre a :meth:`__index__`. Este método retorna ``-1.0`` en caso "
+"de falla, por lo que se debe llamar a :c:func:`PyErr_Occurred` para "
 "verificar si hay errores."
 
 #: ../Doc/c-api/float.rst:54
@@ -139,13 +139,12 @@ msgid ""
 "c:expr:`double` from such a bytes string. The suffix (2, 4 or 8) specifies "
 "the number of bytes in the bytes string."
 msgstr ""
-"Las funciones empaquetar y desempaquetar proporcionan una forma eficiente e "
-"independiente de la plataforma para almacenar valores de coma flotante como "
-"cadenas de bytes. Las rutinas de empaquetar producen una cadena de bytes a "
-"partir de una cadena de bytes de C:c:expr:'double', y las de desempaquetar "
-"producen una cadena de bytes de C:c:expr:'double' a partir de dicha cadena "
-"de bytes. El sufijo (2, 4 o 8) especifica el número de bytes de la cadena de "
-"bytes."
+"Las funciones de empaquetar y desempaquetar proporcionan una manera "
+"eficiente e independiente de la plataforma para almacenar valores de coma "
+"flotante como cadenas de bytes. Las rutinas Pack producen una cadena de "
+"bytes a partir de un C :c:expr:`double`, y las rutinas Desempaquetar "
+"producen un C :c:expr:`double` a partir de dicha cadena de bytes. El sufijo "
+"(2, 4 u 8) especifica el número de bytes en la cadena de bytes."
 
 #: ../Doc/c-api/float.rst:90
 msgid ""
@@ -224,20 +223,17 @@ msgstr "``-0.0`` and ``+0.0`` produce la misma cadena de bytes."
 #: ../Doc/c-api/float.rst:126
 msgid "Pack a C double as the IEEE 754 binary16 half-precision format."
 msgstr ""
-"Empaqueta una estructura C:c:expr:'double' como el formato de media "
-"precision IEEE 754 binario16."
+"Empaquete un C doble como el formato de media precisión IEEE 754 binary16."
 
 #: ../Doc/c-api/float.rst:130
 msgid "Pack a C double as the IEEE 754 binary32 single precision format."
 msgstr ""
-"Empaqueta una estructura C:c:expr:'double' como el formato de precisión "
-"única IEEE 754 binario32."
+"Empaque un C doble como el formato de precisión simple IEEE 754 binary32."
 
 #: ../Doc/c-api/float.rst:134
 msgid "Pack a C double as the IEEE 754 binary64 double precision format."
 msgstr ""
-"Empaqueta una estructure C:c:expr:'double' como el formato de doble "
-"precision IEEE 754 binario64."
+"Empaque un C doble como el formato de doble precisión IEEE 754 binary64."
 
 #: ../Doc/c-api/float.rst:138
 msgid "Unpack functions"
@@ -254,11 +250,11 @@ msgid ""
 msgstr ""
 "Las rutinas de desempaquetado leen 2, 4 o 8 bytes, comenzando en *p*. *le* "
 "es un argumento :c:expr:`int` , distinto de cero si la cadena bytes usa el "
-"criterio little-endian (exponente al final, en ``p+1``, ``p+3`` o ``p+6`` "
-"y ``p+7``), cero si usa el criterio big-endian (exponente primero, en "
-"*p*). La constante :c:data:`PY_BIG_ENDIAN` se puede usar para usar el "
-"endian: es igual a ``1`` en el procesador big endian, o ``0`` en el "
-"procesador little endian."
+"criterio little-endian (exponente al final, en ``p+1``, ``p+3`` o ``p+6`` y "
+"``p+7``), cero si usa el criterio big-endian (exponente primero, en *p*). La "
+"constante :c:data:`PY_BIG_ENDIAN` se puede usar para usar el endian: es "
+"igual a ``1`` en el procesador big endian, o ``0`` en el procesador little "
+"endian."
 
 #: ../Doc/c-api/float.rst:147
 msgid ""
@@ -276,23 +272,19 @@ msgid ""
 "that represents a NaN or infinity."
 msgstr ""
 "Hay que tener en cuenta que en una plataforma que no sea IEEE, esto se "
-"negará a desempaquetar una cadena de bytes que representa un NaN o "
-"infinito."
+"negará a desempaquetar una cadena de bytes que representa un NaN o infinito."
 
 #: ../Doc/c-api/float.rst:156
 msgid "Unpack the IEEE 754 binary16 half-precision format as a C double."
 msgstr ""
-"Desempaqueta el formato de media precisión IEEE 754 binario16 como C:c:"
-"expr:'double'."
+"Descomprima el formato de media precisión IEEE 754 binary16 como un doble C."
 
 #: ../Doc/c-api/float.rst:160
 msgid "Unpack the IEEE 754 binary32 single precision format as a C double."
 msgstr ""
-"Desempaqueta el formato de precisión única IEEE 754 binario32 como C:c:"
-"expr:'double'."
+"Descomprima el formato de precisión simple IEEE 754 binary32 como un doble C."
 
 #: ../Doc/c-api/float.rst:164
 msgid "Unpack the IEEE 754 binary64 double precision format as a C double."
 msgstr ""
-"Desempaqueta el formato de doble precisión IEEE 754 binario64 como C:c:"
-"expr:'double'."
+"Descomprima el formato de doble precisión IEEE 754 binary64 como un doble C."
