--- a/c-api/init.po
+++ b/c-api/init.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-10-21 00:37-0300\n"
+"PO-Revision-Date: 2023-01-14 14:08-0500\n"
 "Last-Translator: CatalinaArrey <CatalinaArreyA@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: ../Doc/c-api/init.rst:8
 msgid "Initialization, Finalization, and Threads"
@@ -270,10 +271,9 @@ msgstr ""
 "c:func:`Py_GetPath`."
 
 #: ../Doc/c-api/init.rst:113
-#, fuzzy
 msgid "Private flag used by ``_freeze_module`` and ``frozenmain`` programs."
 msgstr ""
-"Indicador privado utilizado por los programas ``_freeze_importlib`` y "
+"Indicador privado utilizado por los programas ``_freeze_module`` y "
 "``frozenmain``."
 
 #: ../Doc/c-api/init.rst:117
@@ -627,6 +627,10 @@ msgid ""
 "stdio_encoding` and :c:member:`PyConfig.stdio_errors` should be used "
 "instead, see :ref:`Python Initialization Configuration <init-config>`."
 msgstr ""
+"Esta API se mantiene para la compatibilidad con versiones anteriores: en su "
+"lugar, se debe usar la configuración de :c:member:`PyConfig.stdio_encoding` "
+"y :c:member:`PyConfig.stdio_errors`, consulta :ref:`Configuración de "
+"inicialización de Python <init-config>`."
 
 #: ../Doc/c-api/init.rst:331
 msgid ""
@@ -686,6 +690,9 @@ msgid ""
 "program_name` should be used instead, see :ref:`Python Initialization "
 "Configuration <init-config>`."
 msgstr ""
+"Esta API se mantiene para la compatibilidad con versiones anteriores: en su "
+"lugar, se debe usar la configuración de :c:member:`PyConfig.program_name`, "
+"consulta :ref:`Configuración de inicialización de Python <init-config>`."
 
 #: ../Doc/c-api/init.rst:367
 msgid ""
@@ -714,13 +721,12 @@ msgstr ""
 #: ../Doc/c-api/init.rst:378 ../Doc/c-api/init.rst:529
 #: ../Doc/c-api/init.rst:644 ../Doc/c-api/init.rst:680
 #: ../Doc/c-api/init.rst:706
-#, fuzzy
 msgid ""
 "Use :c:func:`Py_DecodeLocale` to decode a bytes string to get a :c:expr:"
 "`wchar_*` string."
 msgstr ""
-"Use :c:func:`Py_DecodeLocale` para decodificar una cadena de bytes para "
-"obtener una cadena :c:type:`wchar_ *`."
+"Utilice :c:func:`Py_DecodeLocale` para decodificar una cadena de bytes para "
+"obtener una cadena de tipo :c:expr:`wchar_*`."
 
 #: ../Doc/c-api/init.rst:388
 msgid ""
@@ -898,6 +904,10 @@ msgid ""
 "be used instead, see :ref:`Python Initialization Configuration <init-"
 "config>`."
 msgstr ""
+"Esta API se mantiene para la compatibilidad con versiones anteriores: en su "
+"lugar, se debe usar la configuración de :c:member:`PyConfig."
+"module_search_paths` y :c:member:`PyConfig.module_search_paths_set`, "
+"consulta :ref:`Configuración de inicialización de Python <init-config>`."
 
 # Actualmente se está usando el sistema operativo macOS, mientras que Mac OS X
 # es un versión más antigua de la misma.
@@ -958,7 +968,6 @@ msgstr ""
 "caracteres que se parece a ::"
 
 #: ../Doc/c-api/init.rst:551
-#, fuzzy
 msgid ""
 "The first word (up to the first space character) is the current Python "
 "version; the first characters are the major and minor version separated by a "
@@ -966,7 +975,7 @@ msgid ""
 "not modify its value.  The value is available to Python code as :data:`sys."
 "version`."
 msgstr ""
-"La primera palabra (hasta el primer carácter de espacio) es la versión "
+"La primerazpalabra (hasta el primer carácter de espacio) es la versión "
 "actual de Python; los primeros tres caracteres son la versión mayor y menor "
 "separados por un punto. La cadena de caracteres retornada apunta al "
 "almacenamiento estático; la persona que llama no debe modificar su valor. El "
@@ -974,7 +983,7 @@ msgstr ""
 
 #: ../Doc/c-api/init.rst:556
 msgid "See also the :c:var:`Py_Version` constant."
-msgstr ""
+msgstr "Consulta también la constante :c:var:`Py_Version`."
 
 #: ../Doc/c-api/init.rst:563
 msgid ""
@@ -1049,6 +1058,10 @@ msgid ""
 "should be used instead, see :ref:`Python Initialization Configuration <init-"
 "config>`."
 msgstr ""
+"Esta API se mantiene para la compatibilidad con versiones anteriores: en su "
+"lugar, se debe usar la configuración de :c:member:`PyConfig.argv`, :c:member:"
+"`PyConfig.parse_argv` y :c:member:`PyConfig.safe_path`, consulta :ref:"
+"`Configuración de inicialización de Python <init-config>`."
 
 #: ../Doc/c-api/init.rst:624
 msgid ""
@@ -1105,6 +1118,8 @@ msgid ""
 "See also :c:member:`PyConfig.orig_argv` and :c:member:`PyConfig.argv` "
 "members of the :ref:`Python Initialization Configuration <init-config>`."
 msgstr ""
+"Consulta también los miembros de :c:member:`PyConfig.orig_argv` y :c:member:"
+"`PyConfig.argv` de :ref:`Python Initialization Configuration <init-config>`."
 
 #: ../Doc/c-api/init.rst:651
 msgid ""
@@ -1135,6 +1150,10 @@ msgid ""
 "argv` and :c:member:`PyConfig.parse_argv` should be used instead, see :ref:"
 "`Python Initialization Configuration <init-config>`."
 msgstr ""
+"Esta API se mantiene para la compatibilidad con versiones anteriores: en su "
+"lugar, se debe usar la configuración de :c:member:`PyConfig.argv` y :c:"
+"member:`PyConfig.parse_argv`, consulta :ref:`Configuración de inicialización "
+"de Python <init-config>`."
 
 #: ../Doc/c-api/init.rst:676
 msgid ""
@@ -1156,6 +1175,9 @@ msgid ""
 "home` should be used instead, see :ref:`Python Initialization Configuration "
 "<init-config>`."
 msgstr ""
+"Esta API se mantiene para la compatibilidad con versiones anteriores: en su "
+"lugar, se debe usar la configuración de :c:member:`PyConfig.home`, consulta :"
+"ref:`Configuración de inicialización de Python <init-config>`."
 
 #: ../Doc/c-api/init.rst:697
 msgid ""
@@ -1366,6 +1388,11 @@ msgid ""
 "`Py_NewInterpreter`), but mixing multiple interpreters and the "
 "``PyGILState_*`` API is unsupported."
 msgstr ""
+"Tenga en cuenta que las funciones ``PyGILState_*``  asumen que solo hay un "
+"intérprete global (creado automáticamente por :c:func:`Py_Initialize`). "
+"Python admite la creación de intérpretes adicionales (usando :c:func:"
+"`Py_NewInterpreter`), pero la mezcla de varios intérpretes y la API "
+"``PyGILState_*`` no está soportada."
 
 #: ../Doc/c-api/init.rst:860
 msgid "Cautions about fork()"
@@ -1479,14 +1506,13 @@ msgstr ""
 "pertenezcan."
 
 #: ../Doc/c-api/init.rst:916
-#, fuzzy
 msgid ""
 "This data structure represents the state of a single thread.  The only "
 "public data member is :attr:`interp` (:c:expr:`PyInterpreterState *`), which "
 "points to this thread's interpreter state."
 msgstr ""
 "Esta estructura de datos representa el estado de un solo hilo. El único "
-"miembro de datos públicos es :attr:`interp` (:c:type:`PyInterpreterState "
+"miembro de datos públicos es :attr:`interp` (:c:expr:`PyInterpreterState "
 "*`), que apunta al estado del intérprete de este hilo."
 
 #: ../Doc/c-api/init.rst:929
@@ -1894,21 +1920,27 @@ msgstr "Obtiene el intérprete del estado del hilo de Python *tstate*."
 #: ../Doc/c-api/init.rst:1193
 msgid "Suspend tracing and profiling in the Python thread state *tstate*."
 msgstr ""
+"Suspender el seguimiento y el perfilado en el estado del hilo de Python "
+"*tstate*."
 
 #: ../Doc/c-api/init.rst:1195
 msgid "Resume them using the :c:func:`PyThreadState_LeaveTracing` function."
-msgstr ""
+msgstr "Reanúdelos usando la función :c:func:`PyThreadState_LeaveTracing`."
 
 #: ../Doc/c-api/init.rst:1202
 msgid ""
 "Resume tracing and profiling in the Python thread state *tstate* suspended "
 "by the :c:func:`PyThreadState_EnterTracing` function."
 msgstr ""
+"Reanudar el seguimiento y el perfilado en el estado del hilo de Python "
+"*tstate* suspendido por la función :c:func:`PyThreadState_EnterTracing`."
 
 #: ../Doc/c-api/init.rst:1205
 msgid ""
 "See also :c:func:`PyEval_SetTrace` and :c:func:`PyEval_SetProfile` functions."
 msgstr ""
+"Consulte también las funciones :c:func:`PyEval_SetTrace` y :c:func:"
+"`PyEval_SetProfile`."
 
 #: ../Doc/c-api/init.rst:1213
 msgid "Get the current interpreter."
@@ -1974,6 +2006,7 @@ msgid ""
 "The *frame* parameter changed from ``PyFrameObject*`` to "
 "``_PyInterpreterFrame*``."
 msgstr ""
+"El parámetro *frame* cambió de ``PyFrameObject*`` a ``_PyInterpreterFrame*``."
 
 #: ../Doc/c-api/init.rst:1259
 msgid "Get the frame evaluation function."
@@ -2024,12 +2057,11 @@ msgstr ""
 "pendiente (si existe) para el hilo. Esto no lanza excepciones."
 
 #: ../Doc/c-api/init.rst:1293
-#, fuzzy
 msgid ""
 "The type of the *id* parameter changed from :c:expr:`long` to :c:expr:"
 "`unsigned long`."
 msgstr ""
-"El tipo del parámetro *id* cambia de :c:type:`long` a :c:type:`unsigned "
+"El tipo del parámetro *id* cambia de :c:expr:`long` a :c:expr:`unsigned "
 "long`."
 
 #: ../Doc/c-api/init.rst:1299
@@ -2325,7 +2357,6 @@ msgstr ""
 "acceder a lo anterior."
 
 #: ../Doc/c-api/init.rst:1481
-#, fuzzy
 msgid ""
 "Also note that combining this functionality with ``PyGILState_*`` APIs is "
 "delicate, because these APIs assume a bijection between Python thread states "
@@ -2336,13 +2367,13 @@ msgid ""
 "`ctypes`) using these APIs to allow calling of Python code from non-Python "
 "created threads will probably be broken when using sub-interpreters."
 msgstr ""
-"También tenga en cuenta que la combinación de esta funcionalidad con :c:func:"
-"`PyGILState_\\*` API es delicada, porque estas API suponen una biyección "
+"También tenga en cuenta que la combinación de esta funcionalidad con "
+"``PyGILState_*`` APIs es delicada, porque estas APIs suponen una biyección "
 "entre los estados de hilo de Python e hilos a nivel del sistema operativo, "
 "una suposición rota por la presencia de subinterpretes. Se recomienda "
 "encarecidamente que no cambie los subinterpretes entre un par de llamadas "
 "coincidentes :c:func:`PyGILState_Ensure` y :c:func:`PyGILState_Release`. "
-"Además, las extensiones (como :mod:`ctypes`) que usan estas API para "
+"Además, las extensiones (como :mod:`ctypes`) que usan estas APIs para "
 "permitir la llamada de código Python desde hilos no creados por Python "
 "probablemente se rompan cuando se usan subinterpretes."
 
@@ -2674,7 +2705,7 @@ msgstr ""
 
 #: ../Doc/c-api/init.rst:1664
 msgid "See also the :func:`sys.setprofile` function."
-msgstr ""
+msgstr "Consulte también la función :func:`sys.setprofile`."
 
 #: ../Doc/c-api/init.rst:1666 ../Doc/c-api/init.rst:1680
 msgid "The caller must hold the :term:`GIL`."
@@ -2700,7 +2731,7 @@ msgstr ""
 
 #: ../Doc/c-api/init.rst:1678
 msgid "See also the :func:`sys.settrace` function."
-msgstr ""
+msgstr "Consulte también la función :func:`sys.settrace`."
 
 #: ../Doc/c-api/init.rst:1686
 msgid "Advanced Debugger Support"
@@ -2755,7 +2786,6 @@ msgid "Thread Local Storage Support"
 msgstr "Soporte de almacenamiento local de hilo"
 
 #: ../Doc/c-api/init.rst:1729
-#, fuzzy
 msgid ""
 "The Python interpreter provides low-level support for thread-local storage "
 "(TLS) which wraps the underlying native TLS implementation to support the "
@@ -2767,9 +2797,9 @@ msgstr ""
 "El intérprete de Python proporciona soporte de bajo nivel para el "
 "almacenamiento local de hilos (TLS) que envuelve la implementación de TLS "
 "nativa subyacente para admitir la API de almacenamiento local de hilos de "
-"nivel Python (:class:`threading.local`). Las API de nivel CPython C son "
+"nivel Python (:class:`threading.local`). Las APIs de nivel CPython C son "
 "similares a las ofrecidas por pthreads y Windows: use una clave de hilo y "
-"funciones para asociar un valor de :c:type:`void*` por hilo."
+"funciones para asociar un valor de :c:expr:`void*` por hilo."
 
 #: ../Doc/c-api/init.rst:1736
 msgid ""
@@ -2789,7 +2819,6 @@ msgstr ""
 "hilos."
 
 #: ../Doc/c-api/init.rst:1743
-#, fuzzy
 msgid ""
 "None of these API functions handle memory management on behalf of the :c:"
 "expr:`void*` values.  You need to allocate and deallocate them yourself. If "
@@ -2797,8 +2826,8 @@ msgid ""
 "don't do refcount operations on them either."
 msgstr ""
 "Ninguna de estas funciones API maneja la administración de memoria en nombre "
-"de los valores :c:type:`void*`. Debe asignarlos y desasignarlos usted mismo. "
-"Si los valores :c:type:`void*` son :c:type:`PyObject*`, estas funciones "
+"de los valores :c:expr:`void*`. Debe asignarlos y desasignarlos usted mismo. "
+"Si los valores :c:expr:`void*` son :c:expr:`PyObject*`, estas funciones "
 "tampoco realizan operaciones de conteo de referencias en ellos."
 
 #: ../Doc/c-api/init.rst:1751
@@ -2807,7 +2836,6 @@ msgstr ""
 "API de almacenamiento específico de hilo (TSS, *Thread Specific Storage*)"
 
 #: ../Doc/c-api/init.rst:1753
-#, fuzzy
 msgid ""
 "TSS API is introduced to supersede the use of the existing TLS API within "
 "the CPython interpreter.  This API uses a new type :c:type:`Py_tss_t` "
@@ -2815,7 +2843,7 @@ msgid ""
 msgstr ""
 "La API de TSS se introduce para reemplazar el uso de la API TLS existente "
 "dentro del intérprete de CPython. Esta API utiliza un nuevo tipo :c:type:"
-"`Py_tss_t` en lugar de :c:type:`int` para representar las claves del hilo."
+"`Py_tss_t` en lugar de :c:expr:`int` para representar las claves del hilo."
 
 #: ../Doc/c-api/init.rst:1759
 msgid "\"A New C-API for Thread-Local Storage in CPython\" (:pep:`539`)"
@@ -2876,24 +2904,22 @@ msgstr ""
 "dinámica."
 
 #: ../Doc/c-api/init.rst:1796
-#, fuzzy
 msgid ""
 "Free the given *key* allocated by :c:func:`PyThread_tss_alloc`, after first "
 "calling :c:func:`PyThread_tss_delete` to ensure any associated thread locals "
 "have been unassigned. This is a no-op if the *key* argument is ``NULL``."
 msgstr ""
-"Libera la clave *key* asignada por :c:func:`PyThread_tss_alloc`, después de "
+"Libera la *clave* asignada por :c:func:`PyThread_tss_alloc`, después de "
 "llamar por primera vez :c:func:`PyThread_tss_delete` para asegurarse de que "
-"los hilos locales asociados no hayan sido asignados. Esto es un *no-op* si "
-"el argumento *key* es `NULL`."
+"los hilos locales asociados no hayan sido asignados. Esto es un no-op si el "
+"argumento *clave* es ``NULL``."
 
 #: ../Doc/c-api/init.rst:1802
-#, fuzzy
 msgid ""
 "A freed key becomes a dangling pointer. You should reset the key to ``NULL``."
 msgstr ""
-"Una clave (*key*) liberada se convierte en un puntero colgante (*dangling "
-"pointer*), debe restablecer la llave a `NULL`."
+"Una clave liberada se convierte en un puntero colgante. Debería restablecer "
+"la clave a ``NULL``."
 
 #: ../Doc/c-api/init.rst:1807
 msgid "Methods"
@@ -2948,24 +2974,22 @@ msgstr ""
 "la misma llave; llamarla en una llave ya destruida es un *no-op*."
 
 #: ../Doc/c-api/init.rst:1841
-#, fuzzy
 msgid ""
 "Return a zero value to indicate successfully associating a :c:expr:`void*` "
 "value with a TSS key in the current thread.  Each thread has a distinct "
 "mapping of the key to a :c:expr:`void*` value."
 msgstr ""
 "Retorna un valor cero para indicar la asociación exitosa de un valor a :c:"
-"type:`void*` con una clave TSS en el hilo actual. Cada hilo tiene un mapeo "
-"distinto de la clave a un valor :c:type:`void*`."
+"expr:`void*` con una clave TSS en el hilo actual. Cada hilo tiene un mapeo "
+"distinto de la clave a un valor :c:expr:`void*`."
 
 #: ../Doc/c-api/init.rst:1848
-#, fuzzy
 msgid ""
 "Return the :c:expr:`void*` value associated with a TSS key in the current "
 "thread.  This returns ``NULL`` if no value is associated with the key in the "
 "current thread."
 msgstr ""
-"Retorna el valor :c:type:`void*` asociado con una clave TSS en el hilo "
+"Retorna el valor :c:expr:`void*` asociado con una clave TSS en el hilo "
 "actual. Esto retorna ``NULL`` si no hay ningún valor asociado con la clave "
 "en el hilo actual."
 
