fix errores de pospell c-api/init

--- a/c-api/init.po
+++ b/c-api/init.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-01-14 14:08-0500\n"
+"PO-Revision-Date: 2023-01-14 14:22-0500\n"
 "Last-Translator: CatalinaArrey <CatalinaArreyA@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -975,7 +975,7 @@ msgid ""
 "not modify its value.  The value is available to Python code as :data:`sys."
 "version`."
 msgstr ""
-"La primerazpalabra (hasta el primer carácter de espacio) es la versión "
+"La primera palabra (hasta el primer carácter de espacio) es la versión "
 "actual de Python; los primeros tres caracteres son la versión mayor y menor "
 "separados por un punto. La cadena de caracteres retornada apunta al "
 "almacenamiento estático; la persona que llama no debe modificar su valor. El "
@@ -1925,7 +1925,7 @@ msgstr ""
 
 #: ../Doc/c-api/init.rst:1195
 msgid "Resume them using the :c:func:`PyThreadState_LeaveTracing` function."
-msgstr "Reanúdelos usando la función :c:func:`PyThreadState_LeaveTracing`."
+msgstr "Reanudelos usando la función :c:func:`PyThreadState_LeaveTracing`."
 
 #: ../Doc/c-api/init.rst:1202
 msgid ""
