Traducido reference/lexical_analysis
Closes #1906

--- a/reference/lexical_analysis.po
+++ b/reference/lexical_analysis.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2021-10-30 14:13-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/reference/lexical_analysis.rst:6
@@ -172,16 +172,15 @@ msgstr ""
 "`notepad` de Microsoft)."
 
 #: ../Doc/reference/lexical_analysis.rst:104
-#, fuzzy
 msgid ""
 "If an encoding is declared, the encoding name must be recognized by Python "
 "(see :ref:`standard-encodings`). The encoding is used for all lexical "
 "analysis, including string literals, comments and identifiers."
 msgstr ""
-"Si se declara una codificación, el nombre de la codificación debe ser "
-"reconocido por Python. La codificación se utiliza para todos los análisis "
-"léxicos, incluidos los literales de cadena, los comentarios y los "
-"identificadores."
+"Si se declara una codificación, Python debe reconocer el nombre de la "
+"codificación (ver :ref:`standard-encodings`). La codificación se utiliza "
+"para todos los análisis léxicos, incluidos los literales de cadena, los "
+"comentarios y los identificadores."
 
 #: ../Doc/reference/lexical_analysis.rst:113
 msgid "Explicit line joining"
@@ -527,15 +526,14 @@ msgid "*Pc* - connector punctuations"
 msgstr "*Pc* - puntuaciones conectoras"
 
 #: ../Doc/reference/lexical_analysis.rst:317
-#, fuzzy
 msgid ""
 "*Other_ID_Start* - explicit list of characters in `PropList.txt <https://www."
 "unicode.org/Public/14.0.0/ucd/PropList.txt>`_ to support backwards "
 "compatibility"
 msgstr ""
-"*Other_ID_Start* - lista explícita de caracteres en `PropList.txt <http://"
-"www.unicode.org/Public/12.1.0/ucd/PropList.txt>`_ para apoyar la "
-"compatibilidad hacia atrás"
+"*Other_ID_Start*: lista explícita de caracteres en `PropList.txt <https://"
+"www.unicode.org/Public/14.0.0/ucd/PropList.txt>`_ para admitir la "
+"compatibilidad con versiones anteriores"
 
 #: ../Doc/reference/lexical_analysis.rst:320
 msgid "*Other_ID_Continue* - likewise"
@@ -550,15 +548,14 @@ msgstr ""
 "analizan; la comparación de los identificadores se basa en NFKC."
 
 #: ../Doc/reference/lexical_analysis.rst:325
-#, fuzzy
 msgid ""
 "A non-normative HTML file listing all valid identifier characters for "
 "Unicode 14.0.0 can be found at https://www.unicode.org/Public/14.0.0/ucd/"
 "DerivedCoreProperties.txt"
 msgstr ""
 "Puede encontrar un archivo HTML no normativo que enumera todos los "
-"caracteres identificadores válidos para Unicode 4.1 en https://www.unicode."
-"org/Public/13.0.0/ucd/DerivedCoreProperties.txt"
+"caracteres de identificación válidos para Unicode 14.0.0 en https://www."
+"unicode.org/Public/14.0.0/ucd/DerivedCoreProperties.txt"
 
 #: ../Doc/reference/lexical_analysis.rst:333
 msgid "Keywords"
@@ -730,7 +727,6 @@ msgstr ""
 "léxicas:"
 
 #: ../Doc/reference/lexical_analysis.rst:470
-#, fuzzy
 msgid ""
 "One syntactic restriction not indicated by these productions is that "
 "whitespace is not allowed between the :token:`~python-grammar:stringprefix` "
@@ -739,12 +735,12 @@ msgid ""
 "no encoding declaration is given in the source file; see section :ref:"
 "`encodings`."
 msgstr ""
-"Una restricción sintáctica que no se indica en estas producciones es que no "
-"se permiten espacios en blanco entre el :token:`stringprefix` o :token:"
-"`bytesprefix` y el resto del literal. El conjunto de caracteres fuente está "
-"definido por la declaración de codificación; es UTF-8 si no se da una "
-"declaración de codificación en el archivo fuente; ver la sección :ref:"
-"`encodings`."
+"Una restricción sintáctica no indicada por estas producciones es que no se "
+"permiten espacios en blanco entre :token:`~python-grammar:stringprefix` o :"
+"token:`~python-grammar:bytesprefix` y el resto del literal. El conjunto de "
+"caracteres de origen se define mediante la declaración de codificación; es "
+"UTF-8 si no se proporciona una declaración de codificación en el archivo "
+"fuente; ver apartado :ref:`encodings`."
 
 #: ../Doc/reference/lexical_analysis.rst:480
 msgid ""
@@ -861,18 +857,16 @@ msgid "Notes"
 msgstr "Notas"
 
 #: ../Doc/reference/lexical_analysis.rst:551
-#, fuzzy
 msgid "``\\``\\ <newline>"
-msgstr "``\\newline``"
+msgstr "``\\``\\ <newline>"
 
 #: ../Doc/reference/lexical_analysis.rst:551
 msgid "Backslash and newline ignored"
 msgstr "Barra inversa y línea nueva ignoradas"
 
 #: ../Doc/reference/lexical_analysis.rst:551
-#, fuzzy
 msgid "\\(1)"
-msgstr "\\(6)"
+msgstr "\\(1)"
 
 #: ../Doc/reference/lexical_analysis.rst:553
 msgid "``\\\\``"
@@ -963,9 +957,8 @@ msgid "Character with octal value *ooo*"
 msgstr "Carácter con valor octal *ooo*"
 
 #: ../Doc/reference/lexical_analysis.rst:573
-#, fuzzy
 msgid "(2,4)"
-msgstr "(2,3)"
+msgstr "(2,4)"
 
 #: ../Doc/reference/lexical_analysis.rst:576
 msgid "``\\xhh``"
@@ -976,9 +969,8 @@ msgid "Character with hex value *hh*"
 msgstr "Carácter con valor hexadecimal *hh*"
 
 #: ../Doc/reference/lexical_analysis.rst:576
-#, fuzzy
 msgid "(3,4)"
-msgstr "\\(4)"
+msgstr "(3,4)"
 
 #: ../Doc/reference/lexical_analysis.rst:579
 msgid "Escape sequences only recognized in string literals are:"
@@ -1019,9 +1011,8 @@ msgid "Character with 32-bit hex value *xxxxxxxx*"
 msgstr "Carácter con valor hexadecimal de 32 bits *xxxxxxxx*"
 
 #: ../Doc/reference/lexical_analysis.rst:590
-#, fuzzy
 msgid "\\(7)"
-msgstr "\\(6)"
+msgstr "\\(7)"
 
 #: ../Doc/reference/lexical_analysis.rst:594
 msgid "Notes:"
@@ -1030,6 +1021,8 @@ msgstr "Notas:"
 #: ../Doc/reference/lexical_analysis.rst:597
 msgid "A backslash can be added at the end of a line to ignore the newline::"
 msgstr ""
+"Se puede agregar una barra invertida al final de una línea para ignorar la "
+"nueva línea:"
 
 #: ../Doc/reference/lexical_analysis.rst:603
 msgid ""
@@ -1037,20 +1030,22 @@ msgid ""
 "<strings>`, or parentheses and :ref:`string literal concatenation <string-"
 "concatenation>`."
 msgstr ""
+"Se puede lograr el mismo resultado usando :ref:`triple-quoted strings "
+"<strings>`, o paréntesis y :ref:`string literal concatenation <string-"
+"concatenation>`."
 
 #: ../Doc/reference/lexical_analysis.rst:608
 msgid "As in Standard C, up to three octal digits are accepted."
 msgstr "Como en C estándar, se aceptan hasta tres dígitos octales."
 
 #: ../Doc/reference/lexical_analysis.rst:610
-#, fuzzy
 msgid ""
 "Octal escapes with value larger than ``0o377`` produce a :exc:"
 "`DeprecationWarning`. In a future Python version they will be a :exc:"
 "`SyntaxWarning` and eventually a :exc:`SyntaxError`."
 msgstr ""
-"Las secuencias de escape no reconocidas producen un :exc:"
-"`DeprecationWarning`.  En una futura versión de Python serán un :exc:"
+"Los escapes octales con un valor mayor que ``0o377`` producen un :exc:"
+"`DeprecationWarning`. En una futura versión de Python, serán un :exc:"
 "`SyntaxWarning` y eventualmente un :exc:`SyntaxError`."
 
 #: ../Doc/reference/lexical_analysis.rst:616
@@ -1310,6 +1305,12 @@ msgid ""
 "fields. The :ref:`format specifier mini-language <formatspec>` is the same "
 "as that used by the :meth:`str.format` method."
 msgstr ""
+"Los especificadores de formato de nivel superior pueden incluir campos de "
+"reemplazo anidados. Estos campos anidados pueden incluir sus propios campos "
+"de conversión y :ref:`format specifiers <formatspec>`, pero no pueden "
+"incluir campos de reemplazo anidados más profundos. El :ref:`format "
+"specifier mini-language <formatspec>` es el mismo que usa el método :meth:"
+"`str.format`."
 
 #: ../Doc/reference/lexical_analysis.rst:771
 msgid ""
