--- a/c-api/tuple.po
+++ b/c-api/tuple.po
@@ -285,7 +285,7 @@ msgid ""
 msgstr ""
 "Describe un campo de una secuencia de estructura. Como una secuencia de "
 "estructura se modela como una tupla, todos los campos se escriben como :c:"
-"type:`PyObject*`. El índice en el arreglo :attr:`fields` de :c:type:"
+"expr:`PyObject*`. El índice en el arreglo :attr:`fields` de :c:type:"
 "`PyStructSequence_Desc` determina qué campo de la secuencia de estructura se "
 "describe."
 
