Apply suggestions from code review
Co-authored-by: Nar <51009725+narvmtz@users.noreply.github.com>

--- a/reference/lexical_analysis.po
+++ b/reference/lexical_analysis.po
@@ -179,7 +179,7 @@ msgid ""
 msgstr ""
 "Si se declara una codificación, Python debe reconocer el nombre de la "
 "codificación (ver :ref:`standard-encodings`). La codificación se utiliza "
-"para todos los análisis léxicos, incluidos los literales de cadena, los "
+"para todos los análisis léxicos, incluidos las cadenas literales, los "
 "comentarios y los identificadores."
 
 #: ../Doc/reference/lexical_analysis.rst:113
