--- a/howto/sorting.po
+++ b/howto/sorting.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-04 17:32+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2023-01-30 10:36-0300\n"
+"Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: ../Doc/howto/sorting.rst:4
 msgid "Sorting HOW TO"
@@ -330,7 +331,7 @@ msgstr ""
 
 #: ../Doc/howto/sorting.rst:230
 msgid "Comparison Functions"
-msgstr ""
+msgstr "Funciones de comparación"
 
 #: ../Doc/howto/sorting.rst:232
 msgid ""
@@ -407,6 +408,8 @@ msgid ""
 "However, note that ``<`` can fall back to using :meth:`__gt__` if :meth:"
 "`__lt__` is not implemented (see :func:`object.__lt__`)."
 msgstr ""
+"Sin embargo, tenga en cuenta que ``<`` puede volver a usar :meth:`__gt__` "
+"si :meth:`__lt__` no está implementado (ver :func:`object.__lt__`)."
 
 #: ../Doc/howto/sorting.rst:287
 msgid ""
