--- a/howto/sorting.po
+++ b/howto/sorting.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-01-30 10:36-0300\n"
+"PO-Revision-Date: 2023-01-30 15:38-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -408,7 +408,7 @@ msgid ""
 "However, note that ``<`` can fall back to using :meth:`__gt__` if :meth:"
 "`__lt__` is not implemented (see :func:`object.__lt__`)."
 msgstr ""
-"Sin embargo, tenga en cuenta que ``<`` puede volver a usar :meth:`__gt__` "
+"Sin embargo, tenga en cuenta que ``<`` puede recurrir a usar :meth:`__gt__` "
 "si :meth:`__lt__` no está implementado (ver :func:`object.__lt__`)."
 
 #: ../Doc/howto/sorting.rst:287
